@@ -15,8 +15,8 @@
 
   - if @account.billing_address
     %b Billing Address
-    %div= @account.billing_address.n2br
+    %div= @account.billing_address.n2br if @account.billing_address
 
-  - if 1 || @account.shipping_address && (@account.shipping_address != @account.billing_address)
+  - if @account.shipping_address && (@account.shipping_address != @account.billing_address)
     %b Shipping Address
-    %div= @account.shipping_address.n2br
+    %div= @account.shipping_address.n2br if @account.shipping_address
