@@ -2,13 +2,12 @@
   = link_to_close new_contact_path
   = hidden_field_tag "opportunity", "#{@opportunity.id if @opportunity}"
   = f.hidden_field :user_id
-  = f.hidden_field :assigned_to
   = f.error_messages
   = render :partial => "contacts/top_section", :locals => { :f => f }
   = render :partial => "contacts/extra",       :locals => { :f => f }
   = render :partial => "contacts/web",         :locals => { :f => f }
   = render :partial => "contacts/permissions", :locals => { :f => f }
   .buttonbar
-    = f.submit "Create Contact", :onclick => %/$("contact_assigned_to").value = $F("account_assigned_to"); if ($("account_id").visible()) { $("account_id").enable(); }/
+    = f.submit "Create Contact", :onclick => %/$("account_assigned_to").value = $F("contact_assigned_to"); if ($("account_id").visible()) { $("account_id").enable(); }/
     or
     = link_to_cancel new_contact_path
