@@ -2,13 +2,12 @@
   = link_to_close edit_contact_path(@contact)
   - remote_form_for(@contact) do |f|
     = f.hidden_field :user_id
-    = f.hidden_field :assigned_to
     = f.error_messages
     = render :partial => "contacts/top_section", :locals => { :f => f, :edit => true }
     = render :partial => "contacts/extra",       :locals => { :f => f, :edit => true }
     = render :partial => "contacts/web",         :locals => { :f => f, :edit => true }
     = render :partial => "contacts/permissions", :locals => { :f => f, :edit => true }
     .buttonbar
-      = f.submit "Save Contact", :onclick => %/$("contact_assigned_to").value = $F("account_assigned_to")/
+      = f.submit "Save Contact", :onclick => %/$("account_assigned_to").value = $F("contact_assigned_to")/
       or
       = link_to_cancel edit_contact_path(@contact)
