@@ -19,6 +19,7 @@
   %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
     - fields_for(@account) do |a|
       = a.hidden_field :user_id
+      = a.hidden_field :assigned_to
       %tr
         %td{ :valign => :top }
           .label
@@ -29,4 +30,4 @@
         %td= spacer
         %td{ :valign => :top }
           .label Assigned to:
-          = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
+          = collection_select :contact, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
